--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "apollo-boost": "^0.4.9",
+    "apollo-upload-client": "^17.0.0",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
@@ -34,6 +35,7 @@
     "react": "^18.1.0",
     "react-apollo": "^3.1.5",
     "react-dom": "^18.1.0",
+    "react-dropzone": "^14.2.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
