--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "actioncable": "^5.2.8-1",
     "apollo-boost": "^0.4.9",
     "apollo-upload-client": "^17.0.0",
     "axios": "^0.27.2",
