--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,13 @@
     "@mui/lab": "^5.0.0-alpha.82",
     "@mui/material": "^5.8.0",
     "@mui/styled-engine-sc": "^5.8.0",
+    "@react-oauth/google": "^0.2.6",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "actioncable": "^5.2.8-1",
+    "add": "^2.0.6",
     "apollo-boost": "^0.4.9",
     "apollo-upload-client": "^17.0.0",
     "axios": "^0.27.2",
@@ -47,7 +49,8 @@
     "snakecase-keys": "^5.4.2",
     "styled-components": "^5.3.5",
     "theme-ui": "^0.14.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "build:style": "tailwind build src/index.css - o src/tailwind.css",
