--- a/client/package.json
+++ b/client/package.json
@@ -35,8 +35,11 @@
     "lodash": "^4.17.21",
     "lodash.camelcase": "^4.3.0",
     "lodash.snakecase": "^4.1.1",
+    "moment": "^2.29.4",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-apollo": "^3.1.5",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-dropzone": "^14.2.1",
     "react-redux": "^8.0.2",
