--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-apollo": "^3.1.5",
+    "react-country-region-selector": "^3.6.1",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-dropzone": "^14.2.1",
