--- a/test/fixtures/locations.yml
+++ b/test/fixtures/locations.yml
@@ -1,11 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  user: one
+  event: one
   country: MyString
   region: MyString
-  user: one
 
 two:
+  user: two
+  event: two
   country: MyString
   region: MyString
-  user: two
