--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "add": "^2.0.6",
     "apollo-boost": "^0.4.9",
     "apollo-upload-client": "^17.0.0",
+    "aws-sdk": "^2.1341.0",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
@@ -63,6 +64,9 @@
     "build:style": "tailwind build src/index.css - o src/tailwind.css",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "sync": "aws s3 --region 'us-east-1' sync ./build 's3://lrc-client/'",
+    "invalidate": "aws cloudfront --region 'us-east-1' create-invalidation --distribution-id E2X4YBO2G8Z40B --paths '/*'",
+    "update": "yarn build && yarn sync && yarn invalidate",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
