--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "aws-sdk": "^2.1341.0",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
+    "emoji-picker-react": "^4.4.9",
     "formik": "^2.2.9",
     "formik-material-ui": "^4.0.0-alpha.2",
     "formik-material-ui-lab": "^1.0.0-alpha.2",
