--- a/config/cable.yml
+++ b/config/cable.yml
@@ -7,4 +7,5 @@ test:
 
 production:
   adapter: redis
-  url: redis://lrc-redis.wh99gu.clustercfg.use1.cache.amazonaws.com:6379/1
+  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  channel_prefix: live_rap_central_production
