--- a/lambdas/chat-connect/connect/package.json
+++ b/lambdas/chat-connect/connect/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": ">=0.21.1",
-    "pg": "^8.7.1"
+    "aws-sdk": "^2.100.0"
   },
   "scripts": {
     "test": "mocha tests/unit/"
