--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
     "react-select": "^5.4.0",
     "react-select-search": "^3.0.10",
     "react-star-rating-component": "^1.4.1",
+    "react-swipeable": "^7.0.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
