--- a/client/package.json
+++ b/client/package.json
@@ -49,8 +49,10 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "react-select": "^5.4.0",
     "react-select-search": "^3.0.10",
+    "react-spinners": "^0.13.8",
     "react-star-rating-component": "^1.4.1",
     "react-swipeable": "^7.0.1",
     "redux": "^4.2.0",
