--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,8 +9,9 @@ phases:
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
     commands:
-      - docker build -t $REPOSITORY_URI:latest .
+      - docker build --platform linux/amd64 --tag $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - yarn --cwd client update
   post_build:
     commands:
       - docker push $REPOSITORY_URI:latest
