--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,6 +11,6 @@ phases:
     commands:
       - docker push 655948565243.dkr.ecr.us-east-1.amazonaws.com/lrc_server:latest
       - ls
-      - printf '[{"name":"%s","imageUri":"%s"}]' "$IMAGE_REPO_NAME" "655948565243.dkr.ecr.us-east-1.amazonaws.com/lrc_server:latest" > imagedefinitions.json
+      - printf '[{"name":"lrc_server","imageUri":"655948565243.dkr.ecr.us-east-1.amazonaws.com/lrc_server:latest"}]' > imagedefinitions.json
 artifacts:
   files: imagedefinitions.json
