--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,13 +3,21 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 655948565243.dkr.ecr.us-east-1.amazonaws.com
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+      - REPOSITORY_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME
+	    - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+	    - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
     commands:
-      - docker build --platform linux/amd64 --tag 655948565243.dkr.ecr.us-east-1.amazonaws.com/lrc_server .
+      - cd client 
+      - yarn update
+      - cd ..
+      - docker build --platform linux/amd64 --tag $REPOSITORY_URI:latest .
+      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
-      - docker push 655948565243.dkr.ecr.us-east-1.amazonaws.com/lrc_server:latest
-      - printf '[{"name":"lrc_server","imageUri":"655948565243.dkr.ecr.us-east-1.amazonaws.com/lrc_server:latest"}]' > imagedefinitions.json
+      - docker push $REPOSITORY_URI:latest
+	    - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - printf '[{"name":"%s","imageUri":"%s"}]' "$IMAGE_REPO_NAME" "$REPOSITORY_URI:$IMAGE_TAG" > imagedefinitions.json
 artifacts:
   files: imagedefinitions.json
