--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -339,6 +339,17 @@ Resources:
                   - ecr:PutImage
                   - ecr:UploadLayerPart
                 Resource: '*'
+              - Effect: Allow
+                Action:
+                  - s3:ListBucket
+                  - s3:GetObject
+                  - s3:PutObject
+                  - s3:DeleteObject
+                Resource: '*'
+              - Effect: Allow
+                Action:
+                  - cloudfront:CreateInvalidation
+                Resource: '*'
 
   CodePipelineRole:
     Type: AWS::IAM::Role
