--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,9 @@ phases:
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
     commands:
+      - cd client
+      - yarn update
+      - cd ..
       - docker	build	--platform	linux/amd64	--tag	$REPOSITORY_URI:latest	.
       - docker	tag	$REPOSITORY_URI:latest	$REPOSITORY_URI:$IMAGE_TAG
   post_build:
