--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -289,6 +289,14 @@ Resources:
             Value: latest
           - Name: IMAGE_REPO_NAME
             Value: lrc_server
+          - Name: REACT_APP_SERVER_URL
+            Value: https://loadbalancer.liverapcenter.com
+          - Name: REACT_APP_GOOGLE_CLIENT_ID
+            Value: 663794386212-nc788e9q2plahisjo63vo352vlplocpe.apps.googleusercontent.com
+          - Name: PORT
+            Value: 4000
+          - Name: REACT_APP_GATEWAY_SOCKET_URL
+            Value: wss://r5gucpaple.execute-api.us-east-1.amazonaws.com/production
       Artifacts:
         Type: CODEPIPELINE
       LogsConfig:
