--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,20 +4,21 @@ phases:
   pre_build:
     commands:
       - cd $CODEBUILD_SRC_DIR/client
-
       - yarn install
-      - yarn update
-      - cd $CODEBUILD_SRC_DIR
       - echo "REACT_APP_SERVER_URL=$REACT_APP_SERVER_URL" > .env
       - echo "REACT_APP_GOOGLE_CLIENT_ID=$REACT_APP_GOOGLE_CLIENT_ID" >> .env
       - echo "REACT_APP_GATEWAY_SOCKET_URL=$REACT_APP_GATEWAY_SOCKET_URL" >> .env
       - echo "PORT=$PORT" >> .env
+      - cd $CODEBUILD_SRC_DIR
       - aws	ecr	get-login-password	--region	$AWS_DEFAULT_REGION	|	docker	login	--username	AWS	--password-stdin	$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - REPOSITORY_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME
       - COMMIT_HASH=$(echo	$CODEBUILD_RESOLVED_SOURCE_VERSION	|	cut	-c	1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
     commands:
+      - cd $CODEBUILD_SRC_DIR/client
+      - yarn update
+      - cd $CODEBUILD_SRC_DIR
       - docker	build	--platform	linux/amd64	--tag	$REPOSITORY_URI:latest	.
       - docker	tag	$REPOSITORY_URI:latest	$REPOSITORY_URI:$IMAGE_TAG
   post_build:
