--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,11 +1,16 @@
 version: 0.2
 
+env:
+  variables:
+    REACT_APP_SERVER_URL: $REACT_APP_SERVER_URL
+    REACT_APP_GOOGLE_CLIENT_ID: $REACT_APP_GOOGLE_CLIENT_ID
+    REACT_APP_GATEWAY_SOCKET_URL: $REACT_APP_GATEWAY_SOCKET_URL
 phases:
   pre_build:
     commands:
       - cd $CODEBUILD_SRC_DIR/client
       - yarn install
-      - echo -e "REACT_APP_SERVER_URL=$REACT_APP_SERVER_URL\nREACT_APP_GOOGLE_CLIENT_ID=$REACT_APP_GOOGLE_CLIENT_ID\nREACT_APP_GATEWAY_SOCKET_URL=$REACT_APP_GATEWAY_SOCKET_URL\nPORT=$PORT" > .env
+      - yarn update
       - cd $CODEBUILD_SRC_DIR
       - aws	ecr	get-login-password	--region	$AWS_DEFAULT_REGION	|	docker	login	--username	AWS	--password-stdin	$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - REPOSITORY_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME
@@ -13,9 +18,6 @@ phases:
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
     commands:
-      - cd $CODEBUILD_SRC_DIR/client
-      - yarn update
-      - cd $CODEBUILD_SRC_DIR
       - docker	build	--platform	linux/amd64	--tag	$REPOSITORY_URI:latest	.
       - docker	tag	$REPOSITORY_URI:latest	$REPOSITORY_URI:$IMAGE_TAG
   post_build:
