--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,9 +4,7 @@ phases:
   pre_build:
     commands:
       - cd $CODEBUILD_SRC_DIR/client
-      - export REACT_APP_SERVER_URL=$REACT_APP_SERVER_URL
-      - export REACT_APP_GOOGLE_CLIENT_ID=$REACT_APP_GOOGLE_CLIENT_ID
-      - export REACT_APP_GATEWAY_SOCKET_URL=$REACT_APP_GATEWAY_SOCKET_URL
+      - echo REACT_APP_SERVER_URL=${REACT_APP_SERVER_URL} >> .env
       - yarn install
       - yarn update
       - cd $CODEBUILD_SRC_DIR
