--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,9 +4,9 @@ phases:
   pre_build:
     commands:
       - cd $CODEBUILD_SRC_DIR/client
-      - echo REACT_APP_SERVER_URL=${REACT_APP_SERVER_URL} >> .env
-      - yarn install
-      - yarn update
+      - echo REACT_APP_SERVER_URL=https://foobaz.com >> .env.local
+      - echo REACT_APP_GOOGLE_CLIENT_ID=${REACT_APP_GOOGLE_CLIENT_ID} >> .env.local
+      - echo REACT_APP_GATEWAY_SOCKET_URL=${REACT_APP_GATEWAY_SOCKET_URL} >> .env.local
       - cd $CODEBUILD_SRC_DIR
       - aws	ecr	get-login-password	--region	$AWS_DEFAULT_REGION	|	docker	login	--username	AWS	--password-stdin	$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - REPOSITORY_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME
@@ -14,6 +14,10 @@ phases:
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
     commands:
+      - cd $CODEBUILD_SRC_DIR/client
+      - yarn install
+      - yarn update
+      - cd $CODEBUILD_SRC_DIR
       - docker	build	--platform	linux/amd64	--tag	$REPOSITORY_URI:latest	.
       - docker	tag	$REPOSITORY_URI:latest	$REPOSITORY_URI:$IMAGE_TAG
   post_build:
