--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,5 @@
 
+# REACT_APP_SERVER_URL=http://localhost:3000
 REACT_APP_SERVER_URL=https://loadbalancer.liverapcenter.com
 
 REACT_APP_GOOGLE_CLIENT_ID=663794386212-nc788e9q2plahisjo63vo352vlplocpe.apps.googleusercontent.com
