--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,11 +10,11 @@ phases:
   build:
     commands:
       - cd $CODEBUILD_SRC_DIR/client
-      - echo REACT_APP_SERVER_URL=${REACT_APP_SERVER_URL} >> .env
-      - echo REACT_APP_GOOGLE_CLIENT_ID=${REACT_APP_GOOGLE_CLIENT_ID} >> .env
-      - echo REACT_APP_GATEWAY_SOCKET_URL=${REACT_APP_GATEWAY_SOCKET_URL} >> .env
+      - echo REACT_APP_SERVER_URL=${REACT_APP_SERVER_URL} >> .env.production
+      - echo REACT_APP_GOOGLE_CLIENT_ID=${REACT_APP_GOOGLE_CLIENT_ID} >> .env.production
+      - echo REACT_APP_GATEWAY_SOCKET_URL=${REACT_APP_GATEWAY_SOCKET_URL} >> .env.production
       - ls
-      - cat .env
+      - cat .env.production
       - yarn install
       - yarn update
       - cd $CODEBUILD_SRC_DIR
