--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "aws-sdk": "^2.1341.0",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
+    "dotenv": "^16.3.1",
     "emoji-picker-react": "^4.4.9",
     "formik": "^2.2.9",
     "formik-material-ui": "^4.0.0-alpha.2",
@@ -68,9 +69,9 @@
     "build:style": "tailwind build src/index.css - o src/tailwind.css",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "sync": "aws s3 --region 'us-east-1' sync ./build 's3://lrc-client/'",
-    "invalidate": "aws cloudfront --region 'us-east-1' create-invalidation --distribution-id E2X4YBO2G8Z40B --paths '/*'",
-    "update": "yarn build && yarn sync && yarn invalidate",
+    "sync": "aws s3 --region $AWS_DEFAULT_REGION sync ./build s3://$S3_BUCKET_NAME/",
+    "invalidate": "aws cloudfront --region $AWS_DEFAULT_REGION create-invalidation --distribution-id $CLOUDFRONT_ID --paths '/*'",
+    "update": "dotenv yarn build && dotenv yarn sync && dotenv yarn invalidate",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
