--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "dotenv": "^16.3.1",
+    "dotenv-cli": "^7.3.0",
     "emoji-picker-react": "^4.4.9",
     "formik": "^2.2.9",
     "formik-material-ui": "^4.0.0-alpha.2",
