--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -3,14 +3,6 @@ Parameters:
     Type: String
     Default: lrc_cluster
 
-  SubnetIDs:
-    Type: CommaDelimitedList
-    Default: subnet-08b088db5e5e5bd5c,subnet-04773d1d2fedc094e
-
-  VpcID:
-    Type: String
-    Default: vpc-01623dfaa04cd0df8
-
   LoadBalancerName:
     Type: String
     Default: lrc-load-balancer
@@ -19,12 +11,130 @@ Parameters:
     Type: String
     Default: us-east-1
 
+  VpcCIDR:
+    Description: Please enter the IP range (CIDR notation) for this VPC
+    Type: String
+    Default: 10.14.0.0/16
+
 Resources:
+  MyVPC:
+    Type: AWS::EC2::VPC
+    Properties:
+      CidrBlock: !Ref VpcCIDR
+      EnableDnsSupport: true
+      EnableDnsHostnames: true
+      Tags:
+        - Key: Name
+          Value: LiveRapCenterVPC
+
+  PublicSubnet1:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref MyVPC
+      AvailabilityZone: !Select
+        - 0
+        - Fn::GetAZs: !Ref 'AWS::Region'
+      CidrBlock: !Select [1, !Cidr [!Ref VpcCIDR, 8, 13]]
+      MapPublicIpOnLaunch: true
+      Tags:
+        - Key: Name
+          Value: liverapcenter-app-az-a
+
+  PublicSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref MyVPC
+      AvailabilityZone: !Select
+        - 1
+        - Fn::GetAZs: !Ref 'AWS::Region'
+      CidrBlock: !Select [2, !Cidr [!Ref VpcCIDR, 8, 13]]
+      MapPublicIpOnLaunch: true
+      Tags:
+        - Key: Name
+          Value: liverapcenter-app-az-b
+
+  PublicSubnet3:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref MyVPC
+      AvailabilityZone: !Select
+        - 2
+        - Fn::GetAZs: !Ref 'AWS::Region'
+      CidrBlock: !Select [3, !Cidr [!Ref VpcCIDR, 8, 13]]
+      MapPublicIpOnLaunch: true
+      Tags:
+        - Key: Name
+          Value: liverapcenter-app-az-c
+
+  MyInternetGateway:
+    Type: AWS::EC2::InternetGateway
+    Properties:
+      Tags:
+        - Key: Name
+          Value: LiveRapCenterIGW
+
+  AttachGateway:
+    Type: AWS::EC2::VPCGatewayAttachment
+    Properties:
+      VpcId: !Ref MyVPC
+      InternetGatewayId: !Ref MyInternetGateway
+
+  MyRouteTable:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref MyVPC
+      Tags:
+        - Key: Name
+          Value: LiveRapCenterRouteTable
+
+  RouteToInternet:
+    Type: AWS::EC2::Route
+    DependsOn: AttachGateway
+    Properties:
+      RouteTableId: !Ref MyRouteTable
+      DestinationCidrBlock: 0.0.0.0/0
+      GatewayId: !Ref MyInternetGateway
+
+  AssociateRouteTable1:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PublicSubnet1
+      RouteTableId: !Ref MyRouteTable
+
+  AssociateRouteTable2:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PublicSubnet2
+      RouteTableId: !Ref MyRouteTable
+
+  AssociateRouteTable3:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PublicSubnet3
+      RouteTableId: !Ref MyRouteTable
+
+  RDSSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: RDS Security Group
+      VpcId: !Ref MyVPC
+      SecurityGroupIngress:
+        - Description: 'Allow ECS to communicate with DB'
+          IpProtocol: tcp
+          FromPort: 5432
+          ToPort: 5432
+          SourceSecurityGroupId: !GetAtt ServiceSG.GroupId
+        - Description: 'Allow local ip to communicate with DB'
+          IpProtocol: tcp
+          FromPort: 5432
+          ToPort: 5432
+          CidrIp: 98.204.58.188/32
+
   LoadBalancerSG:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: Security group for the load balancer
-      VpcId: !Ref VpcID
+      VpcId: !Ref MyVPC
       SecurityGroupIngress:
         - IpProtocol: tcp
           FromPort: 80
@@ -39,17 +149,79 @@ Resources:
           ToPort: 3000
           CidrIp: 0.0.0.0/0
 
-  # TODO: replace ecs_to_db security group with an SG that allows traffic from this SG and attach it to the db
   ServiceSG:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: Security group for the service
-      VpcId: !Ref VpcID
+      VpcId: !Ref MyVPC
       SecurityGroupIngress:
         - IpProtocol: tcp
           FromPort: 0
           ToPort: 65535
           SourceSecurityGroupId: !GetAtt LoadBalancerSG.GroupId
+
+  MyDBSubnetGroup:
+    Type: 'AWS::RDS::DBSubnetGroup'
+    Properties:
+      DBSubnetGroupName: lrc-subnet-group
+      DBSubnetGroupDescription: Live Rap Center Subnet Group
+      SubnetIds:
+        - !Ref PublicSubnet1
+        - !Ref PublicSubnet2
+        - !Ref PublicSubnet3
+
+  MyRDSInstance:
+    Type: AWS::RDS::DBInstance
+    DependsOn: AttachGateway
+    Properties:
+      AllocatedStorage: '20'
+      AvailabilityZone: !Select
+        - 0
+        - Fn::GetAZs: !Ref 'AWS::Region'
+      CopyTagsToSnapshot: false
+      DBInstanceClass: db.t3.micro
+      DBInstanceIdentifier: liverapcenterdb
+      DBName: liverapcenterdb
+      Engine: postgres
+      MasterUsername: postgres
+      MasterUserPassword: password
+      MultiAZ: false
+      # TODO: Set to false in production
+      PubliclyAccessible: true
+      StorageType: gp2
+      DBSubnetGroupName: !Ref MyDBSubnetGroup
+      VPCSecurityGroups:
+        - !Ref RDSSecurityGroup
+      # Prevents DB from taking a snapshot every time you delete CFN stack
+      DBSnapshotIdentifier: ''
+
+  RdsEndpointParameter:
+    Type: 'AWS::SSM::Parameter'
+    Properties:
+      Name: '/live-rap-center/prod/AWS_RDS_HOST'
+      Type: 'String'
+      Value: !GetAtt MyRDSInstance.Endpoint.Address
+
+  RdsNameParameter:
+    Type: 'AWS::SSM::Parameter'
+    Properties:
+      Name: '/live-rap-center/prod/AWS_RDS_NAME'
+      Type: 'String'
+      Value: !Ref MyRDSInstance
+
+  RdsPortParameter:
+    Type: 'AWS::SSM::Parameter'
+    Properties:
+      Name: '/live-rap-center/prod/AWS_RDS_PORT'
+      Type: 'String'
+      Value: !GetAtt MyRDSInstance.Endpoint.Port
+
+  RdsUsernameParameter:
+    Type: 'AWS::SSM::Parameter'
+    Properties:
+      Name: '/live-rap-center/prod/AWS_RDS_USERNAME'
+      Type: 'String'
+      Value: postgres
 
   ECSCluster:
     Type: 'AWS::ECS::Cluster'
@@ -79,6 +251,11 @@ Resources:
                 Resource: '*'
 
   ECSTaskDefinition:
+    DependsOn:
+      - RdsEndpointParameter
+      - RdsNameParameter
+      - RdsPortParameter
+      - RdsUsernameParameter
     Type: 'AWS::ECS::TaskDefinition'
     Properties:
       Family: launch_lrc_container
@@ -140,6 +317,7 @@ Resources:
               ValueFrom: arn:aws:ssm:us-east-1:655948565243:parameter/live-rap-center/prod/SECRET_KEY_BASE
 
   ECSService:
+    DependsOn: MyRDSInstance
     Type: AWS::ECS::Service
     Properties:
       Cluster: !Ref ECSClusterName
@@ -163,7 +341,10 @@ Resources:
           AssignPublicIp: ENABLED
           SecurityGroups:
             - !GetAtt ServiceSG.GroupId
-          Subnets: !Ref SubnetIDs
+          Subnets:
+            - !Ref PublicSubnet1
+            - !Ref PublicSubnet2
+            - !Ref PublicSubnet3
       PlatformVersion: LATEST
       DeploymentConfiguration:
         MaximumPercent: 200
@@ -187,7 +368,10 @@ Resources:
       Name: lrc-load-balancer
       SecurityGroups:
         - !GetAtt LoadBalancerSG.GroupId
-      Subnets: !Ref SubnetIDs
+      Subnets:
+        - !Ref PublicSubnet1
+        - !Ref PublicSubnet2
+        - !Ref PublicSubnet3
 
   TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
@@ -198,7 +382,7 @@ Resources:
       Protocol: HTTP
       TargetType: ip
       HealthCheckProtocol: HTTP
-      VpcId: !Ref VpcID
+      VpcId: !Ref MyVPC
 
   Listener:
     Type: AWS::ElasticLoadBalancingV2::Listener
