--- a/config/database.yml
+++ b/config/database.yml
@@ -5,8 +5,11 @@ default: &default
 
 development:
   <<: *default
-  database: lrc_development
-  timeout: 5000
+  host: liverapcenterdb.cckuob6xrxuf.us-east-1.rds.amazonaws.com
+  username: postgres
+  password: password
+  database: liverapcenterdb
+  port: 5432
 
 production:
   <<: *default
