--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
       - DOCKERHUB_USERNAME=$(aws ssm get-parameter --name arn:aws:ssm:$AWS_DEFAULT_REGION:parameter/live-rap-center/prod/DOCKERHUB_USERNAME --query "Parameter.Value" --output text | base64 -d)
       - echo "$DOCKERHUB_PASSWORD" | docker login --username "$DOCKERHUB_USERNAME" --password-stdin
       - aws	ecr	get-login-password	--region	$AWS_DEFAULT_REGION	|	docker	login	--username	AWS	--password-stdin	$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
-      - echo testing output from $DOCKERHUB_USERNAME
+      - echo testing output $DOCKERHUB_USERNAME
       - REPOSITORY_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME
       - COMMIT_HASH=$(echo	$CODEBUILD_RESOLVED_SOURCE_VERSION	|	cut	-c	1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
