--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,9 +5,11 @@ phases:
     commands:
       - DOCKERHUB_PASSWORD=$(aws ssm get-parameter --name "/live-rap-center/prod/DOCKERHUB_PASSWORD" --with-decryption --query "Parameter.Value" --output text --region $AWS_DEFAULT_REGION)
       - DOCKERHUB_USERNAME=$(aws ssm get-parameter --name "/live-rap-center/prod/DOCKERHUB_USERNAME" --with-decryption --query "Parameter.Value" --output text --region $AWS_DEFAULT_REGION)
+      - REACT_APP_SERVER_URL=$(aws ssm get-parameter --name "/live-rap-center/prod/REACT_APP_SERVER_URL" --with-decryption --query "Parameter.Value" --output text --region $AWS_DEFAULT_REGION)
+      - REACT_APP_GOOGLE_CLIENT_ID=$(aws ssm get-parameter --name "/live-rap-center/prod/REACT_APP_GOOGLE_CLIENT_ID" --with-decryption --query "Parameter.Value" --output text --region $AWS_DEFAULT_REGION)
+      - REACT_APP_GATEWAY_SOCKET_URL=$(aws ssm get-parameter --name "/live-rap-center/prod/REACT_APP_GATEWAY_SOCKET_URL" --with-decryption --query "Parameter.Value" --output text --region $AWS_DEFAULT_REGION)
       - echo "$DOCKERHUB_PASSWORD" | docker login --username "$DOCKERHUB_USERNAME" --password-stdin
       - aws	ecr	get-login-password	--region	$AWS_DEFAULT_REGION	|	docker	login	--username	AWS	--password-stdin	$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
-      - echo testing output $DOCKERHUB_USERNAME
       - REPOSITORY_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME
       - COMMIT_HASH=$(echo	$CODEBUILD_RESOLVED_SOURCE_VERSION	|	cut	-c	1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
