--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -16,6 +16,14 @@ Parameters:
     Type: String
     Default: 10.14.0.0/16
 
+  HostedZoneId:
+    Type: String
+    Default: Z02616981L01DPKMGQGTT
+
+  ImageRepoName:
+    Type: String
+    Default: lrc_server
+
 Resources:
   MyVPC:
     Type: AWS::EC2::VPC
@@ -194,6 +202,7 @@ Resources:
         - !Ref RDSSecurityGroup
       # Prevents DB from taking a snapshot every time you delete CFN stack
       DBSnapshotIdentifier: ''
+      StorageEncrypted: true
 
   RdsEndpointParameter:
     Type: 'AWS::SSM::Parameter'
@@ -226,7 +235,7 @@ Resources:
   ECSCluster:
     Type: 'AWS::ECS::Cluster'
     Properties:
-      ClusterName: lrc_cluster
+      ClusterName: !Ref ECSClusterName
       CapacityProviders:
         - FARGATE
 
@@ -267,8 +276,8 @@ Resources:
         - FARGATE
       # name must match the "name" in buildspec.yml imagedefinitions.json
       ContainerDefinitions:
-        - Name: lrc_server
-          Image: 655948565243.dkr.ecr.us-east-1.amazonaws.com/lrc_server:latest
+        - Name: !Ref ImageRepoName
+          Image: !Sub '${AWS::AccountId}.dkr.ecr.${AWSDefaultRegion}.amazonaws.com/${ImageRepoName}:latest'
           Cpu: 1024
           Memory: 3072
           PortMappings:
@@ -317,7 +326,6 @@ Resources:
               ValueFrom: arn:aws:ssm:us-east-1:655948565243:parameter/live-rap-center/prod/SECRET_KEY_BASE
 
   ECSService:
-    DependsOn: MyRDSInstance
     Type: AWS::ECS::Service
     Properties:
       Cluster: !Ref ECSClusterName
@@ -330,8 +338,8 @@ Resources:
       SchedulingStrategy: REPLICA
       DesiredCount: 1
       LoadBalancers:
-        # TODO: reference lrc_server in container definitions
-        - ContainerName: lrc_server
+        # Note this name matches the name in the Task Definition container definition
+        - ContainerName: !Ref ImageRepoName
           ContainerPort: 3000
           LoadBalancerName: !Ref AWS::NoValue
           TargetGroupArn: !Ref TargetGroup
@@ -360,12 +368,13 @@ Resources:
       EnableECSManagedTags: true
     DependsOn:
       - Listener
+      - MyRDSInstance
 
   LoadBalancer:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties:
       Type: application
-      Name: lrc-load-balancer
+      Name: !Ref LoadBalancerName
       SecurityGroups:
         - !GetAtt LoadBalancerSG.GroupId
       Subnets:
@@ -423,7 +432,7 @@ Resources:
   LoadBalancerRoute:
     Type: AWS::Route53::RecordSet
     Properties:
-      HostedZoneId: 'Z02616981L01DPKMGQGTT' # ID for LRC's hosted zone
+      HostedZoneId: !Ref HostedZoneId
       Name: 'loadbalancer.liverapcenter.com'
       Type: 'A'
       AliasTarget:
@@ -442,7 +451,6 @@ Resources:
       Description: lrc codebuild project
       Source:
         Type: CODEPIPELINE
-      # TODO: use param store for env vars
       Environment:
         Type: LINUX_CONTAINER
         ComputeType: BUILD_GENERAL1_SMALL
@@ -453,17 +461,11 @@ Resources:
           - Name: AWS_DEFAULT_REGION
             Value: !Ref AWSDefaultRegion
           - Name: AWS_ACCOUNT_ID
-            Value: '655948565243'
+            Value: !Sub '${AWS::AccountId}'
           - Name: IMAGE_TAG
             Value: latest
           - Name: IMAGE_REPO_NAME
-            Value: lrc_server
-          - Name: REACT_APP_SERVER_URL
-            Value: https://loadbalancer.liverapcenter.com
-          - Name: REACT_APP_GOOGLE_CLIENT_ID
-            Value: 663794386212-nc788e9q2plahisjo63vo352vlplocpe.apps.googleusercontent.com
-          - Name: REACT_APP_GATEWAY_SOCKET_URL
-            Value: wss://r5gucpaple.execute-api.us-east-1.amazonaws.com/production
+            Value: !Ref ImageRepoName
           - Name: S3_BUCKET_NAME
             Value: !Ref StaticWebsiteBucket
           - Name: CLOUDFRONT_ID
@@ -653,9 +655,8 @@ Resources:
                 Owner: AWS
                 Version: 1
                 Provider: CodeBuild
-                # TODO: ProjectName is hardcoded
               Configuration:
-                ProjectName: lrc-build-test
+                ProjectName: !Ref CodeBuildProject
               InputArtifacts:
                 - Name: SourceArtifact
               OutputArtifacts:
@@ -751,10 +752,6 @@ Resources:
             S3OriginConfig:
               OriginAccessIdentity: ''
             OriginAccessControlId: !GetAtt CloudFrontOriginAccessControl.Id
-            # TODO: replace HeaderValue
-            OriginCustomHeaders:
-              - HeaderName: X-LiveRapCircle-Header
-                HeaderValue: placeholderValues
         Enabled: true
         HttpVersion: http2and3
         Aliases:
@@ -811,7 +808,7 @@ Resources:
     DependsOn: CloudFrontDistribution
     Type: AWS::Route53::RecordSet
     Properties:
-      HostedZoneId: 'Z02616981L01DPKMGQGTT' # ID for lrc's hosted zone
+      HostedZoneId: !Ref HostedZoneId
       Name: 'liverapcenter.com'
       Type: 'A'
       AliasTarget:
