--- a/lambdas/add-battle-to-db/add-video-to-db/package.json
+++ b/lambdas/add-battle-to-db/add-video-to-db/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "fetch_youtube_videos",
+  "name": "add_battle_to_db",
   "version": "1.0.0",
-  "description": "fetch youtube videos",
+  "description": "Adds battle to database",
   "main": "app.js",
   "repository": "https://github.com/awslabs/aws-sam-cli/tree/develop/samcli/local/init/templates/cookiecutter-aws-sam-hello-nodejs",
   "author": "SAM CLI",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.21.1",
-    "pg": "^8.7.1",
-    "he": "^1.2.0"
+    "axios": ">=0.21.1",
+    "he": "^1.2.0",
+    "pg": "^8.11.3"
   },
   "scripts": {
     "test": "mocha tests/unit/"
